--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
+python-decouple==3.6
 python-dotenv==0.20.0
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
@@ -41,6 +42,7 @@ semver==2.13.0
 six==1.16.0
 smmap==5.0.0
 streamlit==1.12.2
+streamlit-aggrid==0.3.3
 streamlit-authenticator==0.2.1
 toml==0.10.2
 toolz==0.12.0
